--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,7 +22,9 @@
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemon": "^3.1.0",
     "twilio": "^5.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
