--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.564.0",
-    "aws-sdk": "^2.1608.0",
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/lib-storage": "^3.609.0",
+    "@google-cloud/storage": "^7.11.3",
+    "aws-sdk": "^2.895.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "twilio": "^5.0.3"
   },
   "devDependencies": {
